--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         FreeMED-Relay
-version:      0.2
+version:      0.2.1
 version_from: lib/FreeMED/Relay.pm
 installdirs:  site
 requires:
+    JSON:                          1.00
+    LWP::UserAgent:                2.033
     Test::More:                    0
 
 distribution_type: module
